# learn-django

./: README.md
django_auth/: pyproject.toml
django_auth/config/: settings.py  urls.py
django_auth/templates/: base.html  home.html
django_auth/templates/registration/: login.html  signup.html
django_auth2/: pyproject.toml
django_auth2/config/: settings.py  urls.py
django_auth2/templates/: home.html
django_markdown/: pyproject.toml
django_markdown/blog/: models.py  urls.py  views.py
django_markdown/blog/migrations/: 0001_initial.py
django_markdown/blog/templates/: post_list.html
django_markdown/config/: settings.py  urls.py
django_search/: pyproject.toml
django_search/cities/: admin.py  models.py  views.py
django_search/cities/migrations/: 0001_initial.py
django_search/config/: settings.py  urls.py
django_search/templates/: search_results.html
file_image_uploads/: pyproject.toml
file_image_uploads/config/: settings.py  urls.py
file_image_uploads/posts/: forms.py  models.py  urls.py  views.py
file_image_uploads/posts/migrations/: 0001_initial.py
