[tool.poetry]
name = "django-auth"
version = "0.1.0"
description = ""
authors = ["kmseunh <tmdgus8779@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.0"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
